2009-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
	variables for computing the prompt for reading password.

2009-11-19  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el (dired-compress-file-suffixes): Add ".xz".  (Bug#4953)

	* textmodes/flyspell.el (sgml-lexical-context): Declare.

	* net/newst-treeview.el (newsticker-treeview-treewindow-width)
	(newsticker-treeview-listwindow-height): Fix custom type.

2009-11-19  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char-padded-string): Compose with TAB
	only if there's a font for CH.
	(describe-char): Fix the condition for detecting a trivial
	composition.

2009-11-18  Nathaniel Flath  <flat0103@gmail.com>

	* progmodes/cc-menus.el (cc-imenu-java-generic-expression): A new,
	more accurate version of the regexp.  (Bug#3910)

2009-11-18  Bernhard Herzog  <bernhard.herzog@intevation.de>  (tiny change)

	* vc-hg.el (vc-hg-diff): Fix last patch: do not change directory.

2009-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* font-setting.el (font-use-system-font): Declare for byte-compiler.
	(font-setting-change-default-font): Fix typo in docstring.

2009-11-18  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Bump to 5.31.8.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* font-setting.el (font-use-system-font): Moved ...

	* cus-start.el (all): ... to here.

2009-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-file-expand-wildcards): Simplify.
	Don't set `ad-return-value' if `ad-do-it' doesn't.

	* net/tramp-gvfs.el (tramp-gvfs-handle-write-region): Set file
	modification time.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* menu-bar.el: Put "Use system font" in Option-menu.
	(menu-bar-options-save): Add font-use-system-font.

	* loadup.el: If feature system-font-setting or font-render-setting is
	there, load font-setting.

	* Makefile.in (ELCFILES): font-settings.el is new.